Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
 <h3>
 <a name="int%C3%A9r%C3%AAt-de-la-kinect" class="anchor" href="#int%C3%A9r%C3%AAt-de-la-kinect"><span class="octicon octicon-link"></span></a>Intérêt de la Kinect</h3>
 
-<p><em>Actuellement la partie Kinect est désactivée. Une procédure permettant d'utiliser la Kinect (installation des dépendances) sera disponible prochainement.</em>
-Herbinator contient un item "Activer la kinect", qui permet de capter la main d'une personne devant la kinect, et cette main devient le pointeur. L'utilisateur peut alors effectuer différentes actions avec sa main : </p>
+<p><em>Actuellement la partie Kinect est désactivée. Une procédure permettant d'utiliser la Kinect (installation des dépendances) sera disponible prochainement.</em></p>
+
+<p>Herbinator contient un item "Activer la kinect", qui permet de capter la main d'une personne devant la kinect, et cette main devient le pointeur. L'utilisateur peut alors effectuer différentes actions avec sa main : </p>
 
 <ul>
 <li>Déplacer une forme : On place sa main sur une forme et on "prends" la forme, c'est à dire qu'on recule sa main. Le pointeur change de couleur lorsque la forme est bien attrapée. Pour relacher la forme, il suffit de pousser sa main.</li>
