Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
 <p>Ce programme est le résultat de notre projet de fin de deuxième année de DUT. Nous étions 3 étudiants : Fabio, Evelyne et Yan.</p>
 
+<p><em>Pour lancer le programme, télécharger "Herbinator_runnable.jar, ouvrez une console et tapez java -jar Herbinator_runnable.jar</em></p>
+
 <h2>
 <a name="pr%C3%A9sentation" class="anchor" href="#pr%C3%A9sentation"><span class="octicon octicon-link"></span></a>Présentation</h2>
 
