Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         <hr>
 
         <section id="main_content">
-          <h1>
+          <p><strong>Il est recommandé d'utiliser le programme sous une distribution Linux</strong></p>
+
+<h1>
 <a name="herbinator" class="anchor" href="#herbinator"><span class="octicon octicon-link"></span></a>Herbinator</h1>
 
 <p>Ce programme est le résultat de notre projet de fin de deuxième année de DUT. Nous étions 3 étudiants : Fabio, Evelyne et Yan.</p>
